tests/fixtures/invalid/bytes_div_list.py
# Cannot divide Bytes and List[int]
x: float = b"hello" / [1, 2, 3]
